added initial web css file

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <h3>My Contact Details</h3>
@@ -21,7 +22,7 @@
     <lable>your Email</lable>
     <input type="email" name="youremail" value=""/><br>
       <lable>your message</lable>
-      <br>
+      <br>/
       <textarea name="name" rows="8" cols="80"></textarea>
       <br>
       <input type="submit" name=""/>
