--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>💚Jimmy Patel</title>
+    <title>💚Jimmy Patel personal site</title>
+  <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body>
+  <body style="background-color:#EAF6F6;">
     <table cellspacing="20">
       <tr>
         <td>
-          <img src="Images/jimmy patel.jpg" alt="Jimmy Profile Picture" />
+          <img src="images/jimmy patel.jpg"alt="jimmypatel.jpg">
         </td>
         <td>
           <h1>Jimmy Patel</h1>
@@ -27,29 +28,29 @@
         </td>
       </tr>
     </table>
-
+    <hr>
     
       </li>
     </ul>
 
-    <h3>Work Experience</h3>
+    <h3>Education</h3>
     <table cellspacing="10">
       <thead>
         <th>Dates</th>
-        <th>Work</th>
+        <th>Course</th>
       </thead>
       <tbody>
         <tr>
-          <td>2020-2021</td>
-          <td>Working </td>
+          <td>2022-2023</td>
+          <td>Studing </td>
         </tr>
         <tr>
-          <td>20020-2021</td>
-          <td>store</td>
+          <td>20022-2025</td>
+          <td>B.VOC Artificial Intelligence</td>
         </tr>
       </tbody>
     </table>
-    <hr />
+    <hr>
 
     <h3>Skills</h3>
     <table cellspacing="10">
